samples/_failures_safe/1761096430_df5936_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04adb040.c: In function ‘main’:
./samples/SAFE/__tmp_04adb040.c:133:16: error: missing terminating " character
  133 |         printf("First matrix
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_04adb040.c:133:9: error: expected expression at end of input
  133 |         printf("First matrix
      |         ^~~~~~
./samples/SAFE/__tmp_04adb040.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04adb040.c:133:9: error: expected declaration or statement at end of input
